@@ -78,6 +78,7 @@ require 'diakonos/buffer/selection'
 require 'diakonos/buffer/undo'
 require 'diakonos/clipboard'
 require 'diakonos/clipboard-klipper'
+require 'diakonos/clipboard-xclip'
 require 'diakonos/readline'
 
 require 'diakonos/vendor/fuzzy_file_finder'
